--- a/watch.html
+++ b/watch.html
@@ -65,6 +65,13 @@
   <h1 class="eptitle"><br><br><br><br>Loading...</h1>
     <hr>
   <p class="epnumber">Loading :)</p>
+   <script>localStorage["lang"]="en,fr,it"
+  localStorage["estitleenc"]="disabled";
+  localStorage["activethumbs"]="true"
+  localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
+</script>
+   <script src="https://cdn.jsdelivr.net/npm/mediaelement@4.2.16/build/mediaelement-and-player.min.js"></script>
+<script src="https://mediaelements.github.io/MediaElements/main.js"></script></script>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
 <script src="https://mediaelements.github.io/MediaElements/plyr.js"></script>
   <video poster="https://seriex.to/assets/img/thumbnails/ep/1562457908-003-010.jpg" id="player" playsinline="" controls=""> <source src="https://wave.video/embed/5ebc1c19c9e77c002f7d3fcb/5ebc1c19c9e77c002f7d3fce.mp4" type="video/mp4"> </video>
@@ -78,11 +85,6 @@
             <div class="p-3 my-3 bg-dark text-white">
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4 downloadbtn" href="https://vk.com/doc432326012_548837472">Download</a></div>
 </div></div></div></section>
-   <script>localStorage["lang"]="en,fr,it"
-  localStorage["estitleenc"]="disabled";
-  localStorage["activethumbs"]="true"
-  localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
-</script>
 <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
 <div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
   <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
