--- a/watch.html
+++ b/watch.html
@@ -65,7 +65,8 @@
   <h1 class="eptitle"><br><br><br><br>Loading...</h1>
     <hr>
   <p class="epnumber">Loading :)</p>
-   <script>localStorage["lang"]="en,fr,it"
+   <script>
+  localStorage["lang"]="en,fr,it"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
