--- a/watch.html
+++ b/watch.html
@@ -66,7 +66,7 @@
     <hr>
   <p class="epnumber">Loading :)</p>
    <script>
-  localStorage["lang"]="en,fr,it"
+  localStorage["myurls.json"]="en,fr,it"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
