--- a/watch.html
+++ b/watch.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html><head>
   <title>Miraculous Episodes Online</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
