--- a/watch.html
+++ b/watch.html
@@ -17,6 +17,8 @@
   crossorigin="anonymous"></script>
 </head>
 <body>
+  <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165017722-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -24,6 +26,8 @@
   gtag('js', new Date());
   gtag('config', 'UA-165017722-1');
 </script>
+<!-- /Analytics -->  
+  
   <section class="menu cid-rXAsQDwutp" once="menu" id="menu1-s">
     <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top collapsed">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
