--- a/watch.html
+++ b/watch.html
@@ -57,7 +57,7 @@
                 </li></ul>
         </div>
     </nav>
-  </section>
+</secti
 <section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBxxTeefe" id="custom-html-3e" data-rv-view="467">
   <h1 class="eptitle"><br>Loading...</h1>
    <hr>
@@ -70,24 +70,9 @@
 </script>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
 <script src="https://mediaelements.github.io/MediaElements/plyr.js"></script>
-   <script>
-      document.addEventListener('DOMContentLoaded', () => {
-          const player = Plyr.setup('.js-player');
-      });
-  </script>
   <video poster="https://seriex.to/assets/img/thumbnails/ep/1562457908-003-010.jpg" id="player" playsinline="" controls=""> <source src="https://wave.video/embed/5ebc1c19c9e77c002f7d3fcb/5ebc1c19c9e77c002f7d3fce.mp4" type="video/mp4"> </video>
-<!-- CUSTOM -->
-  <script src="player_data/polyfill.min.js"></script>
+<script src="player_data/polyfill.min.js"></script>
 <script src="player_data/plyr.min.js"></script>
-  <script id="rendered-js">
-          // Change the second argument to your options:
-// https://github.com/sampotts/plyr/#options
-const player = new Plyr('video', { captions: { active: true } });
-
-// Expose player so it can be used from the console
-window.player = player;
-          //# sourceURL=pen.js
-        </script>
 <section class="mbr-section content8">
     <div class=".container-fluid">
         <div class="media-container-fluid title">
@@ -111,8 +96,6 @@ window.player = player;
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  
-  
   <input name="animation" type="hidden">
   </body>
 </html>
