--- a/watch.html
+++ b/watch.html
@@ -63,7 +63,7 @@
    <hr>
   <p class="epnumber">Loading :)</p>
 <script>
-  localStorage["lang"]="en,es,fr,it"
+  localStorage["lang"]="en,fr,it"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
