--- a/index.html
+++ b/index.html
@@ -120,20 +120,20 @@
                         </div>
                         <div id="collapse1_4" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_4">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">Season 4 is supposed to air this Fall</p>
+                                <p class="mbr-fonts-style panel-text display-7">Season 4 is delayed to 2021 due to Covid-19</p>
                             </div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo">
                             <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_4" aria-expanded="false" aria-controls="collapse2">
-                                <h4 class="mbr-fonts-style display-5">New Special Episode?</h4>
+                                <h4 class="mbr-fonts-style display-5">Summary for the Miraculous New-York</h4>
                             </a>
                             
                         </div>
                         <div id="collapse2_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_4">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">According to an interview with Thomas Astruc, a special episode of 52 mins is supposed to air before the premiere of Season 4.</p>
+                                <p class="mbr-fonts-style panel-text display-7">During a school field trip, Ladybug and Cat Noir meet the american superheroes, whom they have to save from an akumatized super-villain. They will also discover that Miraculous exist in the United States, too.</p>
                             </div>
                         </div>
                     </div>
