--- a/show.html
+++ b/show.html
@@ -59,7 +59,7 @@
    <hr>
   <p class="epnumber">Loading :)</p>
 <script>
-  localStorage["show"]="es,it"
+  localStorage["show.json"]="es,it"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
