--- a/clips/chibi/thechase.html
+++ b/clips/chibi/thechase.html
@@ -28,6 +28,7 @@
 
 <!-- Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
+  
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165017722-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -37,7 +38,21 @@
   gtag('config', 'UA-165017722-1');
 </script>
 <!-- /Analytics -->
+<section class="menu cid-rXvYVhruL2" once="menu" id="menu1-a">
 
+    
+
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top collapsed">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </button>
+    </nav>
+</section>
 
 <section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAtDb3XLd" id="custom-html-1w" data-rv-view="281">
   <h1><br><br><br><br><br>Stormy Weather</h1>
