--- a/home.html
+++ b/home.html
@@ -114,7 +114,7 @@
 	 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .collapsible {
-  background-color: #FFFFFF;
+  background-color: light;
   color: red;
   cursor: pointer;
   padding: 18px;
