--- a/home.html
+++ b/home.html
@@ -249,7 +249,7 @@ a:active {
 
 </body>	  
 		  </div>
-<div class="row no-gutters shadow-sm p-3 mb-5 bg-light rounded position-relative">
+<div class="row no-gutters shadow-sm p-3 mb-5 bg-light position-relative">
   <div class="col-md-6 mb-md-0 p-md-4">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRDQjXdSFcrA5pSwovg0nTf1BY6xGCoD9N2RpPV7MaYpd9pz_B8&usqp=CAU" class="w-100" alt="...">
   </div>
