--- a/home.html
+++ b/home.html
@@ -103,76 +103,41 @@
 </section>
 
 <div class="album py-5 bg-light">
-	</div>
-<div class="row no-gutters shadow-sm p-3 mb-5 bg-light rounded position-relative">
-  <div class="col-md-6 mb-md-0 p-md-4">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRDQjXdSFcrA5pSwovg0nTf1BY6xGCoD9N2RpPV7MaYpd9pz_B8&usqp=CAU" class="w-100" alt="...">
-  </div>
-  <div class="col-md-6 position-static p-4 pl-md-0">
-    <h5 class="mt-0">Latest News!</h5>
-	    <head>
-	 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.collapsible {
-  background-color: light;
-  color: red;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-}
+	<div class="container">
 
-.active, .collapsible:hover {
-  background-color: #FFFFFF;
-}
-
-.content {
-  padding: 0 18px;
-  display: none;
-  overflow: hidden;
-  background-color: #FFFFFF;
-}
-</style>
-</head>
-<body>
-
-
-<button type="button" class="collapsible">Season 4 Release Date!</button>
-<div class="content">
-  <p><br>Season 4 is supposed to air this Fall but it could be delayed due to COVID-19</p>
-</div>
-<button type="button" class="collapsible">New Special Episode!</button>
-<div class="content">
-  <p><br>According to an interview with Thomas Astruc, a special episode of 52 mins is supposed to air before the premiere of Season 4.</p>
-</div>
-<button type="button" class="collapsible">The Miraculous Movie Release Date!</button>
-<div class="content">
-  <p><br>The Miraculous Movie will air at the end of 2021</p>
-</div>
-
-<script>
-var coll = document.getElementsByClassName("collapsible");
-var i;
-
-for (i = 0; i < coll.length; i++) {
-  coll[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var content = this.nextElementSibling;
-    if (content.style.display === "block") {
-      content.style.display = "none";
-    } else {
-      content.style.display = "block";
-    }
-  });
-}
-</script>
-	    </body>
-  </div>
-</div>
-</div>
+      <div class="row">
+         <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="felix.eng.html"><img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="felix.eng.html">Felix<br><br></a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S3E23 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S3E25 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="miraclequeen.eng.html"><img src="assets/images/s3e26-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S3E26 | 22 mins</small>
+              </div>
+            </div>
+          </div>
 <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
