--- a/home.html
+++ b/home.html
@@ -138,6 +138,28 @@
               </div>
             </div>
           </div>
+		  <style>
+/* unvisited link */
+a:link {
+  color: grey;
+}
+
+/* visited link */
+a:visited {
+  color: black;
+}
+
+/* mouse over link */
+a:hover {
+  color: grey;
+}
+
+/* selected link */
+a:active {
+  color: grey;
+} 
+</style>
+</head>
 <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
