--- a/watch.html
+++ b/watch.html
@@ -75,7 +75,7 @@
 </script>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
 <script src="https://mediaelements.github.io/MediaElements/plyr.js"></script>
-  <video poster="https://seriex.to/assets/img/thumbnails/ep/1562457908-003-010.jpg" id="player" playsinline="" controls=""> <source src="https://wave.video/embed/5ebc1c19c9e77c002f7d3fcb/5ebc1c19c9e77c002f7d3fce.mp4" type="video/mp4"> </video>
+  <video poster="https://seriex.to/assets/img/thumbnails/ep/1562457908-003-010.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc593404724_555414410?hash=f57be4126ef9c26a38&dl=4ed91103725f592437" type="video/mp4"> </video>
 <script src="player_data/polyfill.min.js"></script>
 <script src="player_data/plyr.min.js"></script>
 <section class="mbr-section content8">
