--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
 }
 
 .active, .collapsible:hover {
-  background-color: #555;
+  background-color: #FFFFFF;
 }
 
 .content {
@@ -134,14 +134,11 @@
   <div class="col-md-6 mb-md-0 p-md-4">
     <img src="https://i.ytimg.com/an_webp/VnIxOtN2l3g/mqdefault_6s.webp?du=3000&sqp=CNiS2fcF&rs=AOn4CLDaIRpjzbukE1_ZFKgn69K7_W7AYw" class="w-100" alt="...">
   </div>
-  <div class="col-md-6 position-static p-4 pl-md-0">
-    <h5 class="mt-0">Columns with stretched link</h5>
+	</br><div class="col-md-6 position-static p-4 pl-md-0">
+	  <h5 class="mt-0">Latest News!</h5></br>
     <p>
 
-<button type="button" class="collapsible">Open Collapsible</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
+
 <button type="button" class="collapsible">Open Section 2</button>
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
