--- a/home.html
+++ b/home.html
@@ -130,20 +130,27 @@
 </style>
 </head>
 <body>
+
 <div class="row no-gutters bg-light position-relative">
   <div class="col-md-6 mb-md-0 p-md-4">
     <img src="https://i.ytimg.com/an_webp/VnIxOtN2l3g/mqdefault_6s.webp?du=3000&sqp=CNiS2fcF&rs=AOn4CLDaIRpjzbukE1_ZFKgn69K7_W7AYw" class="w-100" alt="...">
   </div>
-	</br><div class="col-md-6 position-static p-4 pl-md-0">
-	  <h5 class="mt-0">Latest News!</h5></br>
+  <div class="col-md-6 position-static p-4 pl-md-0">
+    <h5 class="mt-0">Columns with stretched link</h5>
     <p>
+    </p>
+  </div>
+</div>
 
-
-<button type="button" class="collapsible">Open Section 2</button>
+<button type="button" class="collapsible">Open Section 1</button>
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
 <button type="button" class="collapsible">Open Section 2</button>
+<div class="content">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+<button type="button" class="collapsible">Open Section 3</button>
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
@@ -164,9 +171,6 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
-</p>
-  </div>
-</div>
 </body>
 
   </div>
