--- a/home.html
+++ b/home.html
@@ -137,16 +137,19 @@
   </div>
   <div class="col-md-6 position-static p-4 pl-md-0">
 	  <h5 class="mt-0">Latest News!</h5></br>
-<button type="button" class="collapsible">Open Section 1</button>
-	<div class="content"></br><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<button type="button" class="collapsible">Season 4 Release Date!</button>
+	<div class="content"></br><p>Season 4 is delayed to 2021 due to Covid-19</p>
 </div>
-<button type="button" class="collapsible">Open Section 2</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<button type="button" class="collapsible">Miraculous New-York Release Date!</button>
+	<div class="content"></br><p>Miraculous New-York Special is supposed to be out in between 1st September and 2nd October of this Year</p>
 </div>
-<button type="button" class="collapsible">Open Section 3</button>
+<button type="button" class="collapsible">Summary for the Miraculous New-York Special!</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>During a school field trip, Ladybug and Cat Noir meet the american superheroes, whom they have to save from an akumatized super-villain. They will also discover that Miraculous exist in the United States, too.</p>
+</div>
+<button type="button" class="collapsible">The Miraculous Movie Release Date!</button>
+<div class="content">
+  <p>The Miraculous Movie will air at the end of 2021</p>
 </div>
 </div></div>
 
