--- a/home.html
+++ b/home.html
@@ -145,11 +145,11 @@
 </div>
 <button type="button" class="collapsible">Summary for the Miraculous New-York Special!</button>
 <div class="content">
-  <p>During a school field trip, Ladybug and Cat Noir meet the american superheroes, whom they have to save from an akumatized super-villain. They will also discover that Miraculous exist in the United States, too.</p>
+	</br><p>During a school field trip, Ladybug and Cat Noir meet the american superheroes, whom they have to save from an akumatized super-villain. They will also discover that Miraculous exist in the United States, too.</p>
 </div>
 <button type="button" class="collapsible">The Miraculous Movie Release Date!</button>
 <div class="content">
-  <p>The Miraculous Movie will air at the end of 2021</p>
+	</br><p>The Miraculous Movie will air at the end of 2021</p>
 </div>
 </div></div>
 
