--- a/home.html
+++ b/home.html
@@ -101,113 +101,94 @@
         </a>
     </div>
 </section>
-<title>W3.CSS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-.mySlides {display:none;}
-</style>
-<body>
-
-<h2 class="w3-center">Manual Slideshow</h2>
-
-<div class="w3-content w3-display-container">
-  <img class="mySlides" src="https://i.ytimg.com/vi/-6YCJt5V50o/maxresdefault.jpg" style="width:100%">
-  <img class="mySlides" src="https://i.ytimg.com/vi/-6YCJt5V50o/maxresdefault.jpg" style="width:100%">
-  <img class="mySlides" src="https://i.ytimg.com/vi/-6YCJt5V50o/maxresdefault.jpg" style="width:100%">
-  <img class="mySlides" src="https://i.ytimg.com/vi/-6YCJt5V50o/maxresdefault.jpg" style="width:100%">
-
-  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-  <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
-</div>
-
-<script>
-var slideIndex = 1;
-showDivs(slideIndex);
-
-function plusDivs(n) {
-  showDivs(slideIndex += n);
-}
-
-function showDivs(n) {
-  var i;
-  var x = document.getElementsByClassName("mySlides");
-  if (n > x.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = x.length}
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";  
-  }
-  x[slideIndex-1].style.display = "block";  
-}
-</script>
-
-</body>
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-.collapsible {
-  background-color: #FFFFFF;
-  color: red;
+* {box-sizing: border-box}
+.mySlides1, .mySlides2 {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
   cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
 
-.active, .collapsible:hover {
-  background-color: #FFFFFF;
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
-.content {
-  padding: 0 18px;
-  display: none;
-  overflow: hidden;
+/* On hover, add a grey background color */
+.prev:hover, .next:hover {
   background-color: #f1f1f1;
+  color: black;
 }
 </style>
 </head>
 <body>
 
-<div class="row no-gutters bg-light position-relative">
-  <div class="col-md-6 mb-md-0 p-md-4">
-    <img src="https://i.ytimg.com/an_webp/VnIxOtN2l3g/mqdefault_6s.webp?du=3000&sqp=CNiS2fcF&rs=AOn4CLDaIRpjzbukE1_ZFKgn69K7_W7AYw" class="w-100" alt="...">
+<h2 style="text-align:center">Multiple Slideshows</h2>
+
+<p>Slideshow 1:</p>
+<div class="slideshow-container">
+  <div class="mySlides1">
+    <img src="https://i.ytimg.com/vi/u5WssIInhFQ/maxresdefault.jpg" style="width:100%">
   </div>
-  <div class="col-md-6 position-static p-4 pl-md-0">
-	  <h5 class="mt-0">Latest News!</h5></br>
-<button type="button" class="collapsible">Season 4 Release Date!</button>
-	<div class="content"></br><p>Season 4 is delayed to 2021 due to Covid-19</p>
+
+  <div class="mySlides1">
+    <img src="https://i.ytimg.com/vi/u5WssIInhFQ/maxresdefault.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides1">
+    <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" style="width:100%">
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
 </div>
-<button type="button" class="collapsible">Miraculous New-York Release Date!</button>
-	<div class="content"></br><p>Miraculous New-York Special is supposed to be out in between 1st September and 2nd October of this Year</p>
-</div>
-<button type="button" class="collapsible">Summary for the Miraculous New-York Special!</button>
-<div class="content">
-	</br><p>During a school field trip, Ladybug and Cat Noir meet the american superheroes, whom they have to save from an akumatized super-villain. They will also discover that Miraculous exist in the United States, too.</p>
-</div>
-<button type="button" class="collapsible">The Miraculous Movie Release Date!</button>
-<div class="content">
-	</br><p>The Miraculous Movie will air at the end of 2021</p>
-</div>
-</div></div>
+
 
 <script>
-var coll = document.getElementsByClassName("collapsible");
-var i;
+var slideIndex = [1,1];
+var slideId = ["mySlides1", "mySlides2"]
+showSlides(1, 0);
+showSlides(1, 1);
 
-for (i = 0; i < coll.length; i++) {
-  coll[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var content = this.nextElementSibling;
-    if (content.style.display === "block") {
-      content.style.display = "none";
-    } else {
-      content.style.display = "block";
-    }
-  });
+function plusSlides(n, no) {
+  showSlides(slideIndex[no] += n, no);
+}
+
+function showSlides(n, no) {
+  var i;
+  var x = document.getElementsByClassName(slideId[no]);
+  if (n > x.length) {slideIndex[no] = 1}    
+  if (n < 1) {slideIndex[no] = x.length}
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";  
+  }
+  x[slideIndex[no]-1].style.display = "block";  
 }
 </script>
+
 </body>
 
   </div>
