--- a/home.html
+++ b/home.html
@@ -118,12 +118,12 @@ img {vertical-align: middle;}
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
-  position: absolute;
-  top: 50%;
+  position:absolute;
+  top: 13%;
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: white;
+  color: black;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -137,29 +137,97 @@ img {vertical-align: middle;}
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a grey background color */
-.prev:hover, .next:hover {
-  background-color: #f1f1f1;
-  color: black;
+
+</style>
+</head>
+<body>
+
+
+
+<div class="slideshow-container">
+  <div class="mySlides1">
+   <head>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 </style>
 </head>
 <body>
 
-<h2 style="text-align:center">Multiple Slideshows</h2>
 
-<p>Slideshow 1:</p>
-<div class="slideshow-container">
-  <div class="mySlides1">
-    <img src="https://i.ytimg.com/vi/u5WssIInhFQ/maxresdefault.jpg" style="width:100%">
+</br></br></br><div class="row">
+  <div class="column">
+    <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:90%">
+    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+  </div>
+  <div class="column">
+    <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:90%">
+    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+  </div>
+  <div class="column">
+    <img src="https://i.ytimg.com/vi/u5WssIInhFQ/maxresdefault.jpg" alt="Mountains" style="width:90%">
+    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+  </div>
+</div>
+
+</body>
   </div>
 
-  <div class="mySlides1">
-    <img src="https://i.ytimg.com/vi/u5WssIInhFQ/maxresdefault.jpg" style="width:100%">
-  </div>
 
   <div class="mySlides1">
-    <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" style="width:100%">
+    <head>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+
+</br></br></br><div class="row">
+  <div class="column">
+    <img src="https://i.pinimg.com/originals/da/f0/02/daf002f6c5b9950dbe21cb90423cef74.jpg" alt="Snow" style="width:90%">
+    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+  </div>
+  <div class="column">
+    <img src="https://i.ytimg.com/vi/-6YCJt5V50o/maxresdefault.jpg" alt="Forest" style="width:90%">
+    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+  </div>
+  <div class="column">
+    <img src="https://i.ytimg.com/vi/N0P_eRkSwFw/maxresdefault.jpg" alt="Mountains" style="width:90%">
+    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+  </div>
+</div>
+
+</body>
   </div>
 
   <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
