--- a/home.html
+++ b/home.html
@@ -101,6 +101,8 @@
         </a>
     </div>
 </section>
+<div class="album py-5 bg-light">
+   <hr style="width:85%;height:3px" color="grey"><br>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -258,7 +260,7 @@ function showSlides(n, no) {
 </script>
 
 </body>
-
+</div>
   </div>
 </div>
 </div>
