--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
 </section>
 <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
-   &nbsp;<h1>&nbsp; Videos Clips!&nbsp;&nbsp;&nbsp;<br></h1>
+   <h1>&nbsp; Videos Clips!<br></h1>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
