--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 900px;
+  max-width: 1000px;
   position: relative;
   margin: auto;
 }
@@ -140,6 +140,10 @@ img {vertical-align: middle;}
   border-radius: 3px 0 0 3px;
 }
 
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
 
 </style>
 </head>
