--- a/home.html
+++ b/home.html
@@ -179,15 +179,15 @@ img {vertical-align: middle;}
 </br></br></br><div class="row">
   <div class="column">
     <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
-    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption">A caption</figcaption>
   </div>
   <div class="column">
     <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
-    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption">A caption</figcaption>
   </div>
   <div class="column">
     <img src="https://i.ytimg.com/vi/u5WssIInhFQ/maxresdefault.jpg" alt="Mountains" style="width:100%">
-    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption">A caption</figcaption>
   </div>
 </div>
 
@@ -222,15 +222,15 @@ img {vertical-align: middle;}
 </br></br></br><div class="row">
   <div class="column">
     <img src="https://i.pinimg.com/originals/da/f0/02/daf002f6c5b9950dbe21cb90423cef74.jpg" alt="Snow" style="width:100%">
-    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption">A caption</figcaption>
   </div>
   <div class="column">
     <img src="https://i.ytimg.com/vi/-6YCJt5V50o/maxresdefault.jpg" alt="Forest" style="width:100%">
-    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption">A caption</figcaption>
   </div>
   <div class="column">
     <img src="https://i.ytimg.com/vi/N0P_eRkSwFw/maxresdefault.jpg" alt="Mountains" style="width:100%">
-    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption">A caption</figcaption>
   </div>
 </div>
 
