--- a/home.html
+++ b/home.html
@@ -140,8 +140,8 @@ img {vertical-align: middle;}
 }
 
 /* On smaller screens, decrease text size */
-@media only screen and (min-width: 100px) {
-  .prev, .next,.text {font-size: 5px}
+@media only screen and (max-width: 100px) {
+  .prev, .next,.text {font-size: 11px}
 }
 
 </style>
