--- a/home.html
+++ b/home.html
@@ -120,7 +120,7 @@ img {vertical-align: middle;}
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
-  position:absolute;
+  position:;
   top: 13%;
   width: auto;
   padding: 16px;
@@ -135,7 +135,7 @@ img {vertical-align: middle;}
 
 /* Position the "next button" to the right */
 .next {
-  right: 3;
+  right: 0;
   border-radius: 3px 0 0 3px;
 }
 
@@ -174,11 +174,12 @@ img {vertical-align: middle;}
 </br></br></br><div class="row">
   <div class="column">
     <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
-    <figcaption class="figure-caption">A caption</figcaption>
   </div>
   <div class="column">
     <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
-    <figcaption class="figure-caption">A caption</figcaption>
+  </div>
+  <div class="column">
+    <img src="https://i.ytimg.com/vi/u5WssIInhFQ/maxresdefault.jpg" alt="Mountains" style="width:100%">
   </div>
 </div>
 
@@ -213,15 +214,12 @@ img {vertical-align: middle;}
 </br></br></br><div class="row">
   <div class="column">
     <img src="https://i.pinimg.com/originals/da/f0/02/daf002f6c5b9950dbe21cb90423cef74.jpg" alt="Snow" style="width:100%">
-    <figcaption class="figure-caption">A caption</figcaption>
   </div>
   <div class="column">
     <img src="https://i.ytimg.com/vi/-6YCJt5V50o/maxresdefault.jpg" alt="Forest" style="width:100%">
-    <figcaption class="figure-caption">A caption</figcaption>
   </div>
   <div class="column">
     <img src="https://i.ytimg.com/vi/N0P_eRkSwFw/maxresdefault.jpg" alt="Mountains" style="width:100%">
-    <figcaption class="figure-caption">A caption</figcaption>
   </div>
 </div>
 
