--- a/hometest.html
+++ b/hometest.html
@@ -420,7 +420,7 @@ function showSlides(n) {
 }
 </script>
     
-</body>
+	  </body></br></br></br>
    
     <!-- Custom styles for this template -->
     <link href="album.css" rel="stylesheet">
