--- a/hometest.html
+++ b/hometest.html
@@ -93,6 +93,150 @@
         </a>
     </div>
 </section>
+  <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {box-sizing: border-box}
+.mySlides1, .mySlides2 {display: none}
+img {vertical-align: middle;}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position:absolute;
+  top: 13%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+
+</style>
+</head>
+<body>
+
+
+
+<div class="slideshow-container">
+  <div class="mySlides1">
+   <head>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+
+</br></br></br></br><div class="row">
+  <div class="column">
+  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
+  </div>
+  <div class="column">
+  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
+  </div>
+</div>
+
+</body>
+  </div>
+
+
+  <div class="mySlides1">
+    <head>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+
+</br></br></br><div class="row">
+  <div class="column">
+    <img src="https://i.pinimg.com/originals/da/f0/02/daf002f6c5b9950dbe21cb90423cef74.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="https://i.ytimg.com/vi/-6YCJt5V50o/maxresdefault.jpg" alt="Forest" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="https://i.ytimg.com/vi/N0P_eRkSwFw/maxresdefault.jpg" alt="Mountains" style="width:100%">
+  </div>
+</div>
+
+</body>
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+
+
+<script>
+var slideIndex = [1,1];
+var slideId = ["mySlides1", "mySlides2"]
+showSlides(1, 0);
+showSlides(1, 1);
+
+function plusSlides(n, no) {
+  showSlides(slideIndex[no] += n, no);
+}
+
+function showSlides(n, no) {
+  var i;
+  var x = document.getElementsByClassName(slideId[no]);
+  if (n > x.length) {slideIndex[no] = 1}    
+  if (n < 1) {slideIndex[no] = x.length}
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";  
+  }
+  x[slideIndex[no]-1].style.display = "block";  
+}
+</script>
+
+</body>
     <head>	   
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
