--- a/hometest.html
+++ b/hometest.html
@@ -299,10 +299,71 @@ function showSlides(n) {
   dots[slideIndex-1].className += " active";
 }
 </script>
-</body>
 
-  
- <br>
+</body>
+<div class="album py-5 bg-light">
+<div class="container">
+    <div class="row">
+        <h1>&nbsp; Latest episodes<br><br></h1>
+      </div>
+    </div>
+   
+    <!-- Custom styles for this template -->
+    <link href="album.css" rel="stylesheet">
+<main role="main">
+
+  <div class="album py-5 bg-light">
+    <div class="container">
+
+      <div class="row">
+         <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="felix.eng.html"><img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="felix.eng.html">Felix<br><br></a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S3E23 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S3E25 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="miraclequeen.eng.html"><img src="assets/images/s3e26-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S3E26 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div></div></div></div></main></div>
+    <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.footer {
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: blanc;
+   color: black;
+   text-align: center;
+}
+</style>
+</head>
+<body>
+<br>
 <div class="footer">
   <p>© 2020 ZAG, Method, Toei Animation, SAMG Animation, Disney, TF1, Globosat, SK Broadband. All Rights Reserved.
  <br>Any problems? Contact us : miraculous.fans.20@gmail.com<br>
