--- a/hometest.html
+++ b/hometest.html
@@ -102,7 +102,7 @@ body {font-family: Verdana, sans-serif; margin:0}
 /* Slideshow container */
 .slideshow-container {
   position: relative;
-  background: #f1f1f1f1;
+  background: #d3d3d3;
 }
 
 /* Slides */
