--- a/hometest.html
+++ b/hometest.html
@@ -82,7 +82,15 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Miraculous Ladybug!</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Catch All the news and episodes here!</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Catch All the news and episodes here!<br><br>SELECT YOUR LANGUAGE:
+                <a class="menu-item">
+		<select name="forma" onchange="location = this.value;">
+ <option>English</option>
+ <option value="/episodes.fr"> French</option>
+      <option value="/episodes.fr"> Italian</option>
+      <option value="/episodes.fr"> Arabic</option>
+</select>
+                  </a></p>
                 
             </div>
         </div>
