--- a/hometest.html
+++ b/hometest.html
@@ -105,7 +105,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
+body {font-family: rubik; margin:0}
 
 /* Slideshow container */
 .slideshow-container {
