--- a/hometest.html
+++ b/hometest.html
@@ -101,6 +101,9 @@
         </a>
     </div>
 </section>
+<div class="album py-5 bg-light">
+   <hr style="width:85%;height:3px" color="grey"><br>
+	<h1>&nbsp; Chibi Episodes!&nbsp;&nbsp;&nbsp;<br></h1>
   <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -110,7 +113,7 @@ body {font-family: rubik; margin:0}
 /* Slideshow container */
 .slideshow-container {
   position: relative;
-  background: #d3d3d3;
+  background: #FFFFFF;
 }
 
 /* Slides */
@@ -312,6 +315,7 @@ function showSlides(n) {
 </script>
 
 </body>
+	</div>
   </div>
   </div>
 </div>
