--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
 </section>
 <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
-	<h1>&nbsp; Chibi Episodes&nbsp;&nbsp;&nbsp;<br></h1>
+	&nbsp;&nbsp;<h1>&nbsp; Chibi Episodes&nbsp;&nbsp;&nbsp;<br></h1>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
