--- a/home.html
+++ b/home.html
@@ -198,7 +198,7 @@ img {
 </style>
 <body>
 
-<h2 style="text-align:center">Chibi Episodes</h2>
+	<h2 style="text-align:center">Chibi Episodes</h2></br>
 
 <div class="container">
   <div class="mySlides">
